# relais

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INTERNALS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: BenchEngine.h  bench_gdsf.cpp  bench_io_batch.cpp  bench_io_pg.cpp  bench_io_redis.cpp  bench_relais_cache.cpp
cmake/: RelaisGenerateWrappers.cmake  jcailloux-relaisConfig.cmake.in
include/jcailloux/relais/: DbProvider.h  Log.h
include/jcailloux/relais/cache/: CachedWrapper.h  ChunkMap.h  GDSFMetadata.h  GDSFPolicy.h  GhostEntry.h  InvalidateOn.h  Metrics.h  ParseUtils.h  QueryCacheKey.h  QueryParser.h  RedisCache.h  TaggedEntry.h
include/jcailloux/relais/config/: CachedClock.h  Duration.h  FixedString.h  TypeTraits.h  repo_config.h  repository_config.h
include/jcailloux/relais/io/: EpollIoContext.h  IoContext.h  IoPool.h  Task.h
include/jcailloux/relais/io/batch/: BatchScheduler.h  TimingEstimator.h
include/jcailloux/relais/io/pg/: PgConnection.h  PgError.h  PgParams.h  PgPool.h  PgResult.h
include/jcailloux/relais/io/redis/: RedisClient.h  RedisConnection.h  RedisError.h  RedisPool.h  RedisResult.h  RespParser.h  RespWriter.h
include/jcailloux/relais/list/: ListCache.h  ListCacheRepo.h  ListCacheRepository.h  ListCacheTraits.h  ListQuery.h  ModificationTracker.h
include/jcailloux/relais/list/decl/: FilterDescriptor.h  FixedString.h  GeneratedCriteria.h  GeneratedFilters.h  GeneratedTraits.h  HttpQueryParser.h  ListDescriptor.h  ListDescriptorQuery.h  SortDescriptor.h
include/jcailloux/relais/repository/: BaseRepo.h  BaseRepository.h  CachedRepo.h  CachedRepository.h  InvalidationMixin.h  ListCacheRepo.h  ListMixin.h  PartialKeyValidator.h  RedisRepo.h  RedisRepository.h  Repo.h  Repository.h
include/jcailloux/relais/wrapper/: BufferView.h  EntityConcepts.h  EntityView.h  EntityWrapper.h  FieldUpdate.h  Format.h  ListWrapper.h  SerializationTraits.h
scripts/: generate_entities.py  generate_test_fixtures.sh  init_test_db.sh  setup_tests.sh
tests/: INTERNALS.md  README.md  drogon_model_config.json  test_all_runner.cpp  test_base_repository.cpp  test_base_repository_compile.cpp  test_benchmark.cpp  test_cached_repository.cpp  test_concurrency.cpp  test_dbprovider_log.cpp  test_decl_list_cache.cpp  test_decl_list_full.cpp  test_decl_list_redis.cpp  test_full_cache.cpp  test_generated_wrapper.cpp  test_list_system_compile.cpp  test_partial_key.cpp  test_redis_repository.cpp  test_redis_repository_compile.cpp  test_repository_compile.cpp  test_warmup.cpp
tests/config/: test_l1_config.cpp  test_l2_config.cpp
tests/fixtures/: EpollIoContext.h  RelaisTestAccessors.h  TestArticle.h  TestEvent.h  TestItem.h  TestMembership.h  TestOrder.h  TestProduct.h  TestPurchase.h  TestQueryHelpers.h  TestRepositories.h  TestRunner.h  TestUser.h  test_helper.h
tests/fixtures/mocks/: Mock_RelaisTestOrders.cc  Mock_RelaisTestOrders.h  Mock_SmartrepoTestOrders.cc  Mock_SmartrepoTestOrders.h
tests/io/: test_batch_scheduler.cpp  test_batch_scheduler_integration.cpp  test_epoll_io_context.cpp  test_io_context.cpp  test_io_pg_integration.cpp  test_io_pg_pool_compile.cpp  test_io_pg_types.cpp  test_io_redis_integration.cpp  test_io_redis_types.cpp  test_io_resp2.cpp  test_io_task.cpp  test_pg_pipeline.cpp  test_redis_pool.cpp
tests/migrations/: 000001_create_test_items.sql  000002_create_test_users_purchases.sql  000003_create_test_articles.sql  000004_create_test_orders.sql  000005_create_test_events.sql  000006_create_test_products.sql  000007_create_test_memberships.sql
tests/relais/: test_all_runner.cpp  test_base_repository.cpp  test_base_repository_compile.cpp  test_cached_repository.cpp  test_composite_key.cpp  test_concurrency.cpp  test_dbprovider_log.cpp  test_decl_list_cache.cpp  test_decl_list_full.cpp  test_decl_list_redis.cpp  test_full_cache.cpp  test_gdsf.cpp  test_gdsf_disabled.cpp  test_generated_wrapper.cpp  test_list_system_compile.cpp  test_partial_key.cpp  test_partition_key.cpp  test_redis_repository.cpp  test_redis_repository_compile.cpp  test_repository_compile.cpp  test_warmup.cpp
tests/relais/config/: test_l1_config.cpp  test_l2_config.cpp
tests/scripts/: generate_test_fixtures.sh  init_test_db.sh  setup_tests.sh
